2006-10-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/html.py (HtmlResource.render): if we get a
	unicode object from our content() method, encode it into utf-8
	like we've been claiming to all along. This allows the comments
	and author names from svnpoller.py to be delivered properly.

	* buildbot/changes/svnpoller.py (SvnSource.create_changes):
	de-unicodify filenames before creating the Change, because the
	rest of buildbot is unlikely to handle them well. Leave the 'who'
	field as a unicode object.. I don't think there's anything that
	will break very soon, and it will probably nudge us towards
	accepting unicode everywhere sooner or later. Stop using the
	"date" field that comes out of SVN, since it is using the
	repository's clock (and timezone) and what we care about is the
	buildmaster's (otherwise Changes from the future show up later
	than the builds they triggered).
	* buildbot/test/test_svnpoller.py (Everything.test1): match the
	change to .when

	* buildbot/changes/svnpoller.py (SvnSource): added Niklaus Giger's
	Suvbersion repository polling ChangeSource. I've hacked it up
	considerably: any bugs are entirely my own fault. Thank you
	Niklaus!
	* buildbot/test/test_svnpoller.py: tests for it
	* docs/buildbot.texinfo (SvnSource): document it

2006-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Periodic): submit a reason= to the
	BuildSet to indicate which Scheduler triggered the build. Thanks
	to Mateusz Loskot for the suggestion.
	(Nightly): same
	* buildbot/test/test_scheduler.py (Scheduling.testPeriodic1): test it

	* buildbot/changes/p4poller.py (P4Source): some minor stylistic
	changes: set self.loop in __init__, remove unused volatile=

	* docs/buildbot.texinfo (.buildbot config directory): add more
	docs on the .buildbot/options keys used by "buildbot try"
	* buildbot/scripts/tryclient.py (Try.createJob): remove dead code
	(Try.deliverJob): same

	* buildbot/changes/bonsaipoller.py (BonsaiParser): more updates